<resources>

    <string name="url_host">http://kafuuchino.moe:9940</string>
    <string name="url_load_item_info"></string>
    <string name="url_load_items">/lights/list/</string>
    <string name="url_upload_item">/lights/create/</string>
    <string name="url_modify_item">/lights/update/pk/</string>
    <string name="url_delete_item">/lights/delete/pk/</string>
    <string name="url_search_tag">/lights/search-tag/</string>
    <string name="url_image_upload"></string>
    <string name="url_login">/accounts/sign-in/</string>
    <string name="url_register">/accounts/sign-up/</string>
    <string name="url_connect">/devices/connection/</string>
    <string name="url_device_state">/devices/state/</string>
    <string name="url_rate">/lights/review/create/</string>
    <string name="url_use">/devices/pk-control/</string>

    <string name="app_name">NutritionLight</string>

    <string name="get_tarted">시작</string>

    <string name="create_item">조명 추가</string>


    <string name="item_setting_clear">초기화</string>
    <string name="item_setting_save">저장</string>
    <string name="item_create_title">조명 이름</string>
    <string name="item_create_content">내용</string>
    <string name="item_setting_overview1">전력량</string>
    <string name="item_setting_overview2">조명 온도</string>
    <string name="item_setting_overview">개요</string>
    <string name="item_setting_time">시간</string>
    <string name="item_create_info">정보</string>
    <string name="item_create_light">조명</string>
    <string name="item_create_light_amount">밝기</string>
    <string name="item_create_color_temperature">색 온도</string>
    <string name="item_create_random_setup">무작위 설정</string>
    <string name="item_create_social">공유</string>
    <string name="item_create_visible_item">상대방에게 조명 보이기</string>
    <string name="item_create_visible_comment">Visible comment???</string>
    <string name="item_create_tags">태그</string>
    <string name="item_create_image">이미지</string>
    <string name="item_create_upload_image">미리보기 이미지 선택</string>
    <string name="item_create_create">조명 추가</string>
    <string name="item_connect">조명 연결</string>
    <string name="item_start_connect">시작하기</string>

    <string name="item_info_summary">개요</string>
    <string name="item_info_preference">선호도</string>
    <string name="item_info_writer">작성자</string>
    <string name="item_info_date">날짜</string>

    <string name="search">검색</string>
    <string name="action_add">아이템 추가</string>
    <string name="action_save">아이템 저장</string>
    <string name="action_check">체크</string>

    <string name="hint_id">아이디</string>
    <string name="hint_password">비밀번호</string>

    <string name="show">공개</string>
    <string name="hide">비공개</string>
</resources>
