<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_create">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/linearLayout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right">

                <Switch
                    android:id="@+id/sw_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:text="Enable Preview" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/item_create_light"/>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="#BBBBBB" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/item_create_light_amount" />

                <SeekBar
                    android:id="@+id/sb_color_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/item_create_color_temperature" />

                <ImageView
                    android:id="@+id/iv_tempeature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/img_color_tempeature"
                    android:scaleType="centerCrop" />

                <SeekBar
                    android:id="@+id/sb_color_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btn_random_setup"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_button_green"
                        android:text="@string/item_create_random_setup"
                        android:textColor="@android:color/white" />
                </RelativeLayout>




            </LinearLayout>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/item_create_light" />

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="#BBBBBB" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/item_create_social" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/rb_item_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Show"/>
                    <RadioButton
                        android:id="@+id/rb_item_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Show"/>
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/item_create_visible_comment" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <RadioButton
                        android:id="@+id/rb_comment_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Show"/>
                    <RadioButton
                        android:id="@+id/rb_comment_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Show"/>
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/item_create_tags" />

                    <EditText
                        android:id="@+id/et_tags"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/item_create_image" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="#BBBBBB" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="25dp"
                android:paddingRight="25dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <Button
                        android:id="@+id/btn_upload_image"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="200dp"
                        android:layout_height="35dp"
                        android:background="@drawable/rounded_button_green"
                        android:text="@string/item_create_upload_image"
                        android:textColor="@android:color/white" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>



    <Button
        android:id="@+id/btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_create_create"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"
        android:background="@drawable/rectangle_button_primary" />



</RelativeLayout>
